bug 5) resolvido ultilizando um box-align: center;

--- a/cssbugFixes/exercicio-bugfixes/index.css
+++ b/cssbugFixes/exercicio-bugfixes/index.css
@@ -37,6 +37,10 @@ div img {
     background: black;
 }
 
+ol {
+    box-align: center;
+}
+
 .botao-amarelo {
     background-color: #ffaf43;
     width: 250px;
